jim - May 10, 2006
	* Fixed an error when the LCD device is not available

jim - May 9, 2006
	* Added support for LCD Screens
	* Added support for RaQ3 LCD and Cobalt Panel Utils

This is a new Changelog. The old one is now renamed to CHANGELOG.old.
These scripts are based on LFS-Bootscripts 3.2.2
