@@ -7,19 +7,22 @@
 #
 # Version     : 00.00
 #
-# Notes       :
+# Notes       : In the bootscripts we are assuming that the normal
+#               LCD screen can handle 2 lines 16 characters.
+#               If you LCD is one line you need to set lcd1line
 #
 ########################################################################
 
 # Set the # of lines for the LCD Display
 #
-LCD_LINES=2
+LCD_LINES=1
 
 # The executable that writes to the LCD
 #
-LCD_PROG=/sbin/lcd-write
+LCD_PROG={name of lcd program}
 
 # Number of characters the screen can handle
+# 16 is the most common
 #
 LCD_CHAR=16
 
