@@ -11,6 +11,10 @@
 #
 ########################################################################
 
+# Set the # of lines for the LCD Display
+#
+LCD_LINES=2
+
 # The executable that writes to the LCD
 #
 LCD_PROG=/sbin/putlcd
