@@ -1,3 +1,8 @@
+jim - May 15, 2006
+	* Hide all the output information from the LCD Program
+	* Added support for 1 line LCD screens
+	* Added a generic sysconfig/lcd
+
 jim - May 10, 2006
 	* Fixed an error when the LCD device is not available
 
